changes in the website

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine On 
 RewriteCond %{SERVER_PORT} 80
-RewriteCond %{HTTP_HOST} ^(www\.)?finstreet\.com
-RewriteRule ^(.*)$ https://www.finstreet.com/$1 [R,L]
+RewriteCond %{HTTP_HOST} ^(cryptonite\.)?finstreet\.com
+RewriteRule ^(.*)$ https://cryptonite.finstreet.com/$1 [R,L]
 
 #remove html file extension-e.g. https://example.com/file.html will become https://example.com/file
 RewriteEngine on 
